@startuml DWH_ER
title ER — DWH (PostgreSQL, Star Schema)

entity "dim_date" as DDATE {
  + date_key
  --
  date
  year
  quarter
  month
  day
}

entity "dim_product" as DPROD {
  + product_key
  --
  product_id
  sku
  name
  category_key
}

entity "dim_customer" as DCUST {
  + customer_key
  --
  customer_id
  full_name
  region_key
}

entity "dim_employee" as DEMP {
  + employee_key
  --
  employee_id
  full_name
  region_key
}

entity "dim_region" as DREG {
  + region_key
  --
  region_name
}

entity "dim_category" as DCAT {
  + category_key
  --
  category_name
  parent_category_key (nullable)
}

entity "fact_sales" as FSALES {
  + order_item_id
  --
  date_key
  product_key
  customer_key
  employee_key
  region_key
  category_key
  quantity
  revenue
  discount_amount
  cost
  margin
}

DDATE ||--o{ FSALES : "1 : N"
DPROD ||--o{ FSALES : "1 : N"
DCUST ||--o{ FSALES : "1 : N"
DEMP  ||--o{ FSALES : "1 : N"
DREG  ||--o{ FSALES : "1 : N"
DCAT  ||--o{ FSALES : "1 : N"

@enduml
